--- a/property/yourcast.properties
+++ b/property/yourcast.properties
@@ -3,11 +3,11 @@ assetRepositoryDirectory /var/yourcast/generator/resources/asset/
 velocityTemplates /
 grailsVersion 2.1.0
 applicationVersion 1.0 
-sourceAssetMapping ./mappings/mapping_source.properties
-behaviorAssetMapping ./mappings/mapping_behaviour.properties
-rendererAssetMapping ./mappings/mapping_renderer.properties
-layoutAssetMapping ./mappings/mapping_layout.properties
-zoneAssetMapping ./mappings/mapping_zone.properties
+sourceAssetMapping ./mappings/mapping_source.txt
+behaviorAssetMapping ./mappings/mapping_behaviour.txt
+rendererAssetMapping ./mappings/mapping_renderer.txt
+layoutAssetMapping ./mappings/mapping_layout.txt
+zoneAssetMapping ./mappings/mapping_zone.txt
 configurationModelsDirectory /tmp/config_simple
 featureModelsList Behaviour.xmi;Layout.xmi;Renderer.xmi;Source.xmi;Zone.xmi
 generationDirectory /tmp/generated/
