--- a/generator/asset/element/source/FlickR/FlickR.properties
+++ b/generator/asset/element/source/FlickR/FlickR.properties
@@ -1,3 +1,3 @@
 uri http://api.flickr.com
 path /services/rest/
-query [format=json, nojsoncallback=1,extras=description,date_taken,owner_name,geo,tags,o_dims,url_sq,url_t,url_s,url_q,url_m,url_n,url_z,url_c,url_l,url_o,method=flickr.photosets.getPhotos]
+query [format=json nojsoncallback=1 extras=description,date_taken,owner_name,geo,tags,o_dims,url_sq,url_t,url_s,url_q,url_m,url_n,url_z,url_c,url_l,url_o method=flickr.photosets.getPhotos]
