Some changes in order to generate personalizer

--- a/generator/resources/property/yourcast.properties
+++ b/generator/resources/property/yourcast.properties
@@ -10,7 +10,7 @@ layoutAssetMapping ./mappings/mapping_layout.txt
 zoneAssetMapping ./mappings/mapping_zone.txt
 featureModelsList Behaviour.xmi;Layout.xmi;Renderer.xmi;Source.xmi;Zone.xmi
 generationDirectory /tmp/generated/
-mavenHome /usr/share/maven
+mavenHome /usr/share/maven2
 mavenRepository http://nyx.unice.fr:9007/nexus/content/repositories/snapshots
 mavenRepositoryID snapshots
 mavenRepositoryUser yourcast
