Change property file to get access to maven releases

--- a/generator/resources/property/yourcast.properties
+++ b/generator/resources/property/yourcast.properties
@@ -11,7 +11,7 @@ zoneAssetMapping ./mappings/mapping_zone.txt
 featureModelsList Behaviour.xmi;Layout.xmi;Renderer.xmi;Source.xmi;Zone.xmi
 generationDirectory /tmp/generated/
 mavenHome /usr/share/maven2
-mavenRepository http://nyx.unice.fr:9007/nexus/content/repositories/snapshots
-mavenRepositoryID snapshots
+mavenRepository http://nyx.unice.fr:9007/nexus/content/repositories/releases
+mavenRepositoryID releases
 mavenRepositoryUser yourcast
 mavenRepositoryPassword your20cast13
